--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   },
   "type": "commonjs",
   "main": "launcher.js",
-  "bin": {
-    "synpress": "synpress.js"
-  },
+  "bin": "synpress.js",
   "scripts": {
     "fix": "yarn fix:eslint && yarn fix:prettier",
     "fix:eslint": "eslint --fix **/*.js",
@@ -103,21 +101,13 @@
   "resolutions": {
     "etherscan-api/gh-pages": "5.0.0",
     "@synthetixio/js/lodash": "4.17.21",
-    "@synthetixio/js/**/axios": "1.3.4",
-    "@synthetixio/js/**/underscore": "1.12.1",
-    "synthetix-js/**/elliptic": "6.5.4",
-    "synthetix-js/lodash": "4.17.21",
-    "synthetix-js/**/axios": "1.3.4",
-    "synthetix-js/**/json5": "1.0.2",
-    "synthetix-js/**/node-fetch": "2.6.7",
-    "download/**/http-cache-semantics": "4.1.1",
-    "**/ansi-regex": "5.0.1",
-    "**/@testing-library/dom": "8.20.0"
+    "synthetix-js/lodash": "4.17.21"
   },
   "engines": {
     "node": ">=14"
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "packageManager": "yarn@2.4.3"
 }
